[gd_scene load_steps=3 format=3 uid="uid://cdvww27b00fwi"]

[ext_resource type="Script" path="res://EncounterOption.gd" id="1_iclhe"]
[ext_resource type="FontFile" uid="uid://c36l5impkw80u" path="res://GaMaamli-Regular.ttf" id="2_og1l0"]

[node name="OptionContainer" type="HBoxContainer" groups=["EncounterOption"]]
process_mode = 3
clip_contents = true
script = ExtResource("1_iclhe")

[node name="ColorRect" type="ColorRect" parent="."]
clip_contents = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 2
color = Color(0.882353, 0.513726, 0.443137, 0)

[node name="OptionBackground" type="Sprite2D" parent="ColorRect"]
position = Vector2(119, 24.5)
scale = Vector2(0.15, 0.15)

[node name="lblEncounter1Name" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 65.0
offset_right = 220.0
offset_bottom = 45.0
theme_override_fonts/font = ExtResource("2_og1l0")
theme_override_font_sizes/font_size = 20
text = "placeholder"
vertical_alignment = 1
autowrap_mode = 2

[node name="lblDescription" type="Label" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_og1l0")
theme_override_font_sizes/font_size = 15
text = "placeholder
"
autowrap_mode = 2

[node name="btnChoose" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_og1l0")
text = "Choose"

[connection signal="pressed" from="btnChoose" to="." method="_on_button_pressed"]
